--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,300 +1,351 @@
-/*footer*/
-.footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
+footer {
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
+    margin-top: 60px;
+    padding: 0 20px;
+    text-align: center;
 }
 
-.footer-background-color {
-    background: #0c0c0c;
+.footer-container {
+    background-color: #0c0c0c;
+    color: #fff;
+    text-align: center;
     border-radius: 30px;
-    padding: 40px 28px 28px;
-    flex-direction: column;
-    gap: 92px;
-    display: flex;
+    padding: 40px 28px 28px 28px;
+    margin-bottom: 20px;
 }
 
-.footer-section-logo {
+.footer-section {
     display: flex;
-    align-items: flex-start;
     flex-direction: column;
-    gap: 20px;
 }
 
-.logo-footer {
+.footer-logo {
+    text-align: left;
+    margin-bottom: 20px;
+
+}
+
+.footer-logo-link {
     font-weight: 500;
     font-size: 16px;
-    letter-spacing: -.02em;
+    letter-spacing: -0.02em;
     color: #fbfbfb;
 }
 
-.footer-icon-socials {
-    display: flex;
-    gap: 10px;
+.social-links {
+    margin-bottom: 20px;
 }
 
-.footer-item-icon {
-    border: 1px solid rgba(251, 251, 251, .1);
+.social-links-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: left;
+    gap: 10px;
+    margin: 0;
+}
+
+.social-links-item {
+    display: inline-block;
+    border: 1px solid rgba(251, 251, 251, 0.1);
     border-radius: 10px;
-    padding: 8px;
     width: 34px;
     height: 34px;
 }
 
-.footer-social-link {
-    fill: #fbfbfb;
-    width: 16px;
-    height: 16px;
-    transition: fill .25s cubic-bezier(.4, 0, .2, 1);
-}
-
-.footer-social-link:hover,
-.footer-social-link:focus {
-    fill: #fbfbfb;
+.social-links-item-link {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 8px;
 }
 
 .footer-phone {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid rgba(251, 251, 251, .2);
+    border: 1px solid rgba(251, 251, 251, 0.2);
     border-radius: 16px;
-    width: 152px;
-    height: 44px;
-    margin-top: 20px;
+    width: 100%;
+    max-width: 152px;
+    margin-bottom: 40px;
+    padding: 14px 20px;
+    box-sizing: border-box;
 }
 
-.footer-tel-link {
+
+.footer-phone-link {
+    margin: 10px 0;
+    display: inline-block;
     font-weight: 500;
     font-size: 12px;
-    line-height: 1.3;
+    line-height: 133%;
     text-transform: uppercase;
+    text-align: center;
     color: #fbfbfb;
-}
-
-.footer-text-section {
-    margin-top: 40px;
-    max-width: 279px;
-    height: 96px;
+    margin: 0;
+    width: 100%;
+    white-space: nowrap;
 }
 
 .footer-text {
+    margin-bottom: 92px;
+}
+
+.footer-text-section {
     font-weight: 600;
     font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: -.02em;
+    line-height: 120%;
+    letter-spacing: -0.02em;
     text-align: center;
     color: #fbfbfb;
+    margin: 0;
 }
 
-.footer-content {
+.footer-menu {
     display: flex;
-    flex-direction: column;
-    gap: 48px;
+    justify-content: space-between;
+    align-items: baseline;
+    gap: 0;
+    padding-bottom: 24px;
+    margin-bottom: 24px;
+    border-bottom: 1px solid rgba(251, 251, 251, 0.1);
 }
 
-.footer-section-menu {
-    display: flex;
-    position: relative;
-    gap: 49px;
-}
-
-.footer-section-menu:after {
-    content: "";
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -24px;
-    height: 1px;
-    background-color: #fbfbfb1a;
-}
-
-.footer-list {
+.footer-menu-link {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px 13px;
-    min-width: 147px;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    gap: 8px 16px;
 }
 
-.link-footer,
-.footer-address {
+.footer-list-item {
+    margin-bottom: 5px;
+}
+
+.footer-list-item-link {
     font-weight: 500;
     font-size: 12px;
-    line-height: 1.3;
+    line-height: 133%;
+    text-align: center;
     color: #fbfbfb;
+    text-decoration: none;
+}
+
+.footer-address {
+    width: 83px;
+    text-align: left;
+}
+
+.footer-address-text {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 133%;
+    color: #fbfbfb;
+    margin: 0;
+}
+
+.footer-box {
+    margin: 0;
+    text-align: left;
 }
 
 .footer-box-text {
+    margin-top: 0;
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 10px;
-    line-height: 1.4;
-    letter-spacing: -.02em;
-    color: #fbfbfb80;
-    opacity: 0.9;
+    line-height: 140%;
+    letter-spacing: -0.02em;
+    color: rgba(251, 251, 251, 0.5);
 }
+
 
 .footer-box-list {
     display: flex;
-    flex-direction: row;
     gap: 20px;
-    margin-left: auto;
 }
 
 .footer-box-link {
     font-weight: 500;
     font-size: 10px;
-    line-height: 1.4;
-    letter-spacing: -.02em;
+    line-height: 140%;
+    letter-spacing: -0.02em;
     text-align: right;
-    color: #fbfbfb80;
+    color: rgba(251, 251, 251, 0.5);
+    text-decoration: none;
 }
 
-@media screen and (min-width: 768px) {
-    .footer {
-        flex-direction: column;
+.footer-social-icon {
+    fill: #a9a9a9;
+}
+
+.footer-social-icon:hover,
+.footer-social-icon:focus {
+    fill: #fbfbfb;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width:374px) {
+    .footer-links-list {
+        max-width: 147px;
+    }
+}
+
+@media screen and (min-width:375px) {
+    .footer-links-list {
+        width: 147px;
+    }
+}
+
+@media screen and (min-width:768px) {
+
+    footer {
+        margin-top: 80px;
+        padding: 0 32px;
     }
 
-    .footer-background-color {
-        gap: 100px;
+    .footer-container {
+        text-align: center;
         position: relative;
+        border-radius: 30px;
+        padding: 40px 40px 28px 40px;
+        max-width: 768px;
+        margin-bottom: 32px;
     }
 
-    .logo-footer {
-        font-size: 20px;
+    .footer-logo-link {
+        font-size: 20px
     }
 
     .footer-phone {
         position: absolute;
-        margin-top: 0;
-        top: 40px;
         right: 40px;
-        width: 160px;
-        height: 48px;
+        top: 40px;
+        max-width: 160px;
+        margin-bottom: 0;
+        padding: 15px;
     }
 
-    .footer-tel-link {
+    .footer-phone-link {
         font-size: 14px;
-        line-height: 1.2;
+        line-height: 129%;
     }
 
-    .footer-text-section {
-        margin-top: 86px;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 524px;
+    .social-links {
+        margin-bottom: 86px;
+
+    }
+    .social-links-item {
+        width: 36px;
+        height: 36px;
     }
 
-    .footer-section-menu:after {
-        bottom: -28px;
+    .social-icon {
+        width: 20px;
+        height: 20px;
     }
 
     .footer-text {
+        width: 100%;
+        margin-bottom: 100px;
+        text-align: center;
+        padding: 0 50px;
+    }
+
+    .footer-text-section {
         font-size: 28px;
-        line-height: 1.1;
+        line-height: 114%;
+        letter-spacing: -0.02em;
     }
 
-    .footer-content {
-        gap: 56px;
+
+    .footer-menu {
+        align-items: baseline;
+        gap: 0;
+        padding-bottom: 28px;
+        margin-bottom: 28px;
     }
 
-    .footer-list {
-        display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
-        flex-direction: row;
+    .footer-menu-link {
+        align-items: baseline;
         flex-wrap: nowrap;
-        gap: 19px;
-        min-width: 400px;
+        width: 100%;
+        gap: 0 19px;
     }
 
-    .link-footer {
-        font-size: 14px;
+    .footer-list-item {
+        margin: 0;
     }
+
+    .footer-list-item-link {
+        font-size: 14px;
+        line-height: 129%;
+    }
+
 
     .footer-address {
-        max-width: 162px;
-        margin-left: auto;
+        width: 162px;
+        text-align: left;
     }
 
-    .footer-section-box {
+    .footer-address-text {
+        font-size: 14px;
+        line-height: 129%;
+    }
+
+    .footer-box {
         display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
-        flex-direction: row;
-        flex-wrap: nowrap;
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        margin: 0;
     }
 
     .footer-box-text {
         font-size: 14px;
-        line-height: 1.3;
-        margin: 0;
+        line-height: 129%;
+        margin-bottom: 0;
     }
+
 
     .footer-box-link {
         font-size: 14px;
-        line-height: 1.3;
+        line-height: 129%;
     }
+
 }
 
-@media screen and (min-width: 1280px) {
-    .footer-background-color {
-        gap: 126px;
+@media screen and (min-width:1280px) {
+
+    footer {
+        margin-top: 100px;
+        width: 1280px;
     }
 
-    .footer-section {
-        display: flex
+
+    .footer-container {
+        max-width: 1280px;
+        margin-bottom: 32px;
     }
 
-    .footer-text,
-    .footer-text-section,
-    .footer-phone,
-    .footer-tel-link {
-        display: none;
+    .social-links {
+        margin-bottom: 142px;
     }
 
-    .footer-section-logo {
-        margin-right: 178px;
+    .footer-text {
+        order: -1;
+        position: absolute;
+        top: 40px;
+        right: 347px;
+        width: 523px;
+        padding: 0;
+        margin: 0;
     }
 
-    .footer-text-section-desktop {
-        min-width: 615px;
+    .footer-links-list {
+        gap: 0 40px;
     }
 
-    .footer-text-desktop {
-        max-width: 523px;
-        font-weight: 600;
-        font-size: 28px;
-        line-height: 1.14286;
-        letter-spacing: -.02em;
-        text-align: center;
-        color: #fbfbfb;
-    }
-
-    .footer-tel-link-desktop {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid rgba(251, 251, 251, .2);
-        border-radius: 16px;
-        width: 160px;
-        height: 48px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.28571;
-        text-transform: uppercase;
-        text-align: center;
-        color: #fbfbfb;
-    }
-
-    .footer-content {
-        flex-direction: column;
-        gap: 56px;
-    }
-
-    .footer-list {
-        min-width: 505px;
-    }
-
-    .footer-address {
-        min-width: 162px;
-    }
 }
