--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,78 +1,82 @@
 <footer class="footer" id="to-footer">
     <div class="container footer-container">
-        <div class="footer-background-color">
-            <div class="footer-section">
-                <div class="footer-section-logo">
-                    <a class="logo-footer" href="./index.html">watchcharm</a>
-                    <ul class="footer-icon-socials">
-                        <li class="footer-item-icon">
-                            <a href="https://www.facebook.com/goITclub/" target="_blank" class="footer-social-link">
-                                <svg width="20" height="20">
-                                    <use href="../img/icons_header.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="footer-item-icon">
-                            <a href="https://www.instagram.com/goitclub/" target="_blank" class="footer-social-link ">
-                                <svg width="20" height="20">
-                                    <use href="../img/icons_header.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="footer-item-icon">
-                            <a href="https://www.youtube.com/c/GoIT" target="_blank" class="footer-social-link">
-                                <svg width="20" height="20">
-                                    <use href="../img/icons_header.svg#icon-youtube"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-phone">
-                    <a class="footer-tel-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
-                </div>
-                <div class="footer-text-section">
-                    <p class="footer-text">Have the time of your life with our watches: where high-class
-                        craftsmanship
-                        meets
-                        impeccable
-                        design</p>
-                </div>
-                <div class="footer-text-section-desktop">
-                    <p class="footer-text-desktop">Have the time of your life with our watches: where high-class
-                        craftsmanship meets
-                        impeccable
-                        design</p>
-                </div>
-                <a class="footer-tel-link-desktop" href="tel:+380684439426">+380 (68) 443-94-26</a>
+        <div class="footer-section">
+            <div class="footer-logo">
+                <a class="footer-logo-link" href="index.html">watchcharm</a>
             </div>
-            <div class="footer-content">
-                <div class="footer-section-menu">
-                    <ul class="footer-list">
-                        <li><a class="link-footer" href="./index.html">Home</a></li>
-                        <li><a class="link-footer" href="#about-us">About Us</a></li>
-                        <li><a class="link-footer" href="#catalog">Catalog</a></li>
-                        <li><a class="link-footer" href="#sale">Sale</a></li>
-                        <li><a class="link-footer" href="#reviews">Reviews</a></li>
-                        <li><a class="link-footer" href="#contact">Contact Us</a></li>
+            <div class="social-links">
+                <ul class="social-links-list">
+                    <li class="social-links-item">
+                        <a class="social-links-item-link" href="https://www.facebook.com/goITclub/" target="_blank"
+                            aria-label="Facebook">
+                            <svg class="footer-social-icon" width="18" height="18">
+                                <use href="../img/icons_header.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-links-item">
+                        <a class="social-links-item-link" href="https://www.instagram.com/goitclub/" target="_blank"
+                            aria-label="Instagram">
+                            <svg class="footer-social-icon" width="18" height="18">
+                                <use href="../img/icons_header.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-links-item">
+                        <a class="social-links-item-link" href="https://www.youtube.com/c/GoIT" target="_blank"
+                            aria-label="Youtube">
+                            <svg class="footer-social-icon" width="18" height="18">
+                                <use href="../img/icons_header.svg#icon-youtube"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-phone">
+                <a class="footer-phone-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
+            </div>
+            <div class="footer-text">
+                <p class="footer-text-section">
+                    Have the time of your life with our watches: where high-class
+                    craftsmanship meets impeccable design
+                </p>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-menu-link">
+                    <ul class="footer-links-list">
+                        <li class="footer-list-item">
+                            <a class="footer-list-item-link" href="#home">Home</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a class="footer-list-item-link" href="#about-us">About Us</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a class="footer-list-item-link" href="#catalog">Catalog</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a class="footer-list-item-link" href="#sale">Sale</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a class="footer-list-item-link" href="#reviews">Reviews</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a class="footer-list-item-link" href="#contact-us">Contact Us</a>
+                        </li>
                     </ul>
-
-                    <p class="footer-address">
+                </div>
+                <div class="footer-address">
+                    <p class="footer-address-text">
                         1678 S. Pioneer Road Salt Lake City UT 84104
                     </p>
-
                 </div>
-
-                <div class="footer-section-box">
-
-                    <p class="footer-box-text">
-                        ©2023 The Watch Spot. All rights reserved.
-                    </p>
-                    <ul class="footer-box-list">
-                        <li><a class="footer-box-link" href="">Terms of Service</a></li>
-                        <li><a class="footer-box-link" href="">Privacy Policy</a></li>
-                    </ul>
-
+            </div>
+            <div class="footer-box">
+                <p class="footer-box-text">
+                    &copy;2023 The Watch Spot. All rights reserved.
+                </p>
+                <div class="footer-box-list">
+                    <a class="footer-box-link" href="#">Terms of Service</a>
+                    <a class="footer-box-link" href="#">Privacy Policy</a>
                 </div>
             </div>
         </div>
